# VkModern

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
src/: pch.hpp
